reduce margin in #warn_valid to prevent overflow in safari

--- a/src/App.css
+++ b/src/App.css
@@ -122,8 +122,8 @@ form {
 }
 
 #warn_valid {
-    font-size: 0.5rem;
-    margin: 0.5rem 0;
+    font-size: 0.4rem;
+    margin: 0.1rem 0;
 }
 
 #responseField {
